--- a/more.html
+++ b/more.html
@@ -928,6 +928,8 @@
         }
 
         localStorage.setItem('data', JSON.stringify(formatedData))
+        localStorage.setItem('data1', JSON.stringify(formatedData))
+
       }
     </script>
   </body>
